# AI_agent_event_manager

./: README.md  pyproject.toml
knowledge/: user_preference.txt
src/event_social_media_content_generator/: crew.py  main.py
src/event_social_media_content_generator/config/: agents.yaml  tasks.yaml
