[project]
name = "event_social_media_content_generator"
version = "0.1.0"
description = "event_social_media_content_generator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0"
]

[project.scripts]
event_social_media_content_generator = "event_social_media_content_generator.main:run"
run_crew = "event_social_media_content_generator.main:run"
train = "event_social_media_content_generator.main:train"
replay = "event_social_media_content_generator.main:replay"
test = "event_social_media_content_generator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
